--- a/christmas.html
+++ b/christmas.html
@@ -3,7 +3,7 @@
 <title>2022년 망원댁 크리스마스 파티에 초대합니다!</title>
 </head>
    <body>
-<img src="https://cdn.dribbble.com/users/60016/screenshots/5733374/merry-christmas.gif">
+<img alt="Merry Christmas!" width="732" height="558" data-id="5733374" data-animated-url="https://cdn.dribbble.com/users/60016/screenshots/5733374/merry-christmas.gif" skip_resize="true" srcset="https://cdn.dribbble.com/users/60016/screenshots/5733374/merry-christmas.gif 320w, https://cdn.dribbble.com/users/60016/screenshots/5733374/merry-christmas.gif 400w, https://cdn.dribbble.com/users/60016/screenshots/5733374/merry-christmas.gif 450w, https://cdn.dribbble.com/users/60016/screenshots/5733374/merry-christmas.gif 640w, https://cdn.dribbble.com/users/60016/screenshots/5733374/merry-christmas.gif 700w, https://cdn.dribbble.com/users/60016/screenshots/5733374/merry-christmas.gif 800w, https://cdn.dribbble.com/users/60016/screenshots/5733374/merry-christmas.gif 768w" sizes="(max-width: 919px) 100vw, max(768px, 98vh)" src="https://cdn.dribbble.com/users/60016/screenshots/5733374/merry-christmas.gif">
 일시 : 2022년 12월 24일 오후 4:00<br>
 장소 : 서울특별시 마포구 망원로2길 64 302호 https://naver.me/FDXneKQ3<br>
 준비물 : <br>
